--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,10 @@
 body{
     overflow-x: hidden;
 }
+
+@layer base {
+    html {
+      font-family: 'DM Sans', sans-serif;
+      scroll-behavior: smooth;  /* built-in */
+    }
+}
